--- a/Shop/index.html
+++ b/Shop/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700"
+          rel="stylesheet">
 </head>
 <body>
     <header>
+        <div class="header__logo logo">E-SHOP</div>
         <button class="header__btn btn-cart" type="button">Корзина</button>
     </header>
     <main>
