Added:  - classes "Cart" and "CartItem";  - styles for cart;  - method for count products total cost;  - some fixes...

--- a/Shop/index.html
+++ b/Shop/index.html
@@ -12,6 +12,7 @@
     <header>
         <div class="header__logo logo">E-SHOP</div>
         <button class="header__btn btn-cart" type="button">Корзина</button>
+        <div class="cart"></div>
     </header>
     <main>
         <div class="products"></div>
