Добавлены методы для корзины и отображение всех элементов корзины

--- a/Shop/index.html
+++ b/Shop/index.html
@@ -12,7 +12,7 @@
 <header>
   <div class="header__logo logo">E-SHOP</div>
   <button class="header__btn btn-cart" type="button">Корзина</button>
-  <div class="cart"></div>
+  <div class="cart" aria-hidden="true"></div>
 </header>
 <main>
   <div class="products"></div>
@@ -21,10 +21,10 @@
 <script>
   window.onload = () => {
     document.querySelector('.btn-cart').addEventListener('click', () => {
-      Cart.toggleCart();
+      Cart.toggleDisplayOfCart();
     });
     document.querySelector('.cart').addEventListener('mouseleave', () => {
-      Cart.hideCart();
+      Cart.toggleDisplayOfCart('hide');
     });
   };
 </script>
