--- a/Shop/index.html
+++ b/Shop/index.html
@@ -20,7 +20,8 @@
           <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416
           93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7
           99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7
-          57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path></svg>
+          57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
+        </svg>
       </button>
     </form>
     <button class="header__btn btn-cart" type="button"
@@ -47,13 +48,14 @@
           Итого: <span class="cart-total_value">{{ getTotalPrice() }}</span> руб.
         </div>
         <div class="cart-empty" v-else>Корзина пуста</div>
-
       </div>
     </transition>
   </header>
   <main>
     <div class="products">
-      <div class="product-item" v-for="product in productsRender" :key="product.id_product">
+      <div class="product-item"
+           v-for="product in filteredProducts.length > 0 ? filteredProducts : productsAll"
+           :key="product.id_product">
         <img :src="imgCatalog" alt="Some img">
         <div class="product-item__desc">
           <h3>{{ product.product_name }}</h3>
@@ -68,35 +70,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/mainVue.js"></script>
-
-<script>
-  'use strict';
-  /*
-    window.onload = () => {
-      document.querySelector('.btn-cart').addEventListener('click', () => Cart.toggleDisplayOfCart());
-
-      const cartElem = document.querySelector('.cart');
-      cartElem.addEventListener('click', (e) => {
-        if (e.target.tagName === 'BUTTON' && e.target.classList.contains('btn-cancel')) {
-          cart.removeProduct({
-            id_product: +e.target.dataset['id'],
-            product_name: e.target.dataset['name'],
-            price: +e.target.dataset['price'],
-          });
-        }
-      });
-      document.querySelector('.products').addEventListener('click', (e) => {
-        if (e.target.tagName === 'BUTTON' && e.target.classList.contains('product-item__btn-buy')) {
-          cart.addProduct({
-            id_product: +e.target.dataset['id'],
-            product_name: e.target.dataset['name'],
-            price: +e.target.dataset['price'],
-            quantity: 1,
-          });
-        }
-      })
-    };
-    */
-</script>
 </body>
 </html>
